--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:orcl
 spring.datasource.username=RM557538
 spring.datasource.password=150705
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.session.store-type=none
 
 
 spring.jpa.hibernate.ddl-auto=update
